fix(navbar): navbar dropdown menu goes behind breadcrumb
fix #11

--- a/src/components/navigation.less
+++ b/src/components/navigation.less
@@ -40,6 +40,10 @@
         margin-right: 0;
       }
     }
+
+    li.ui.dropdown.item .menu {
+      z-index: 102;
+    }
   }
 
   a {
